2006-04-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: reconnect to server when connection is interrupted (PostgreSQL backend)

2006-04-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: set default port to 21 (Closes: #0040)
	* bugfix: exit if binding to port fails

2006-03-28  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: malformed response to client (Closes: #0033)
	* feature: use a separate thread for crontab
	* feature: new config option 'client tick' to tune client thread loop

2006-03-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-7-0

2006-03-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: PAM backend segfaults on login

2006-03-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: ability to save config file

2006-03-06  Pierre Chifflier  <pollux@wzdftpd.net>

	Merge patches from JGS:
	* feature: new flag ultrahidden to hide user completely
	* feature: new flag fullpath to show logical drives on windows

2006-02-26  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: compare server and core library version when starting

2006-02-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: make vfs case insensitive on windows

2006-02-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: log file is now optional
	* change: *IMPORTANT* use versioned shared libraries

2006-01-31  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: convert some commands from internal to standard file prints

2006-01-25  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: option to check ip before sending banner

2006-01-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: added debug module

2006-01-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: require pkg-config only when zeroconf support is enabled

2006-01-14  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: add option to disable mysql or pgsql at configure time

2006-01-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: enable MLST/MLSD by default
